[package]
name = "parallel-meil"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
dotenv = "0.15.0"
meilisearch-sdk = "0.28.0"
rand = { version = "0.9.1", features = ["log", "nightly", "serde", "simd_support"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
